# CMake-OOP-CppProject

./: CMakeLists.txt
inc/: bci.hpp  device.hpp
src/: bci.cpp  device.cpp  main.cpp
